syntax = "proto3";

package dev.huhao.samples.ddd.protobuf.blog;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// 这里的API设计借鉴并遵循了Google Cloud的API设计规范（https://cloud.google.com/apis/design）
service BlogService {
  rpc publishBlog (PublishBlogRequest) returns (PublishedBlogDto) {
    option (google.api.http) = {
      post: "/v1/blogs"
      body: "*"
    };
  }
  rpc deleteBlog (DeleteBlogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/blogs/{blogId}"
      body: "*"
    };
  }
}

message PublishBlogRequest {
  string blogId = 1;
}

message PublishedBlogDto {
  string blogId = 1;
  string title = 2;
  string body = 3;
  string authorId = 4;
  string publishedAt = 5;
  string updatedAt = 6;
}

message DeleteBlogRequest {
  string blogId = 1;
}
